name:                hs-canvas
version:             0.1.0.0
synopsis:            Two-dimensional canvas supporting raster operations
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          <dima@dzhus.org>
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options: -Wall -O2 -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3

  hs-source-dirs: src

  exposed-modules:
    Graphics.Algorithms.Rasterization
    Graphics.Canvas
    Graphics.Canvas.Base
    Graphics.Canvas.Tools
    Graphics.Canvas.DevIL

  other-modules:
    Graphics.Canvas.BBox
    Graphics.Canvas.Util

  build-depends:
    base               == 4.6.*,
    primitive          == 0.5.*,
    repa               == 3.2.*,
    repa-devil         == 0.3.*,
    vector             == 0.10.*
